docs(example): enhance pod-mutating with tests and documentation
- Add comprehensive comments explaining configuration options
- Add test.sh script for automated webhook testing
- Update Makefile with auto-generated timestamp tags and test target
- Update README with detailed usage instructions

--- a/examples/pod-mutating/Makefile
+++ b/examples/pod-mutating/Makefile
@@ -1,15 +1,17 @@
 # Image configuration
-IMAGE_REGISTRY ?= docker.io
-IMAGE_REPO ?= jimyag
+IMAGE_REGISTRY ?= registry.i.jimyag.com
+IMAGE_REPO ?= test
 IMAGE_NAME ?= pod-label-injector
-IMAGE_TAG ?= latest
+# Auto-generate tag with timestamp: YYYYMMDD-HH-MM-SS
+# Use := to evaluate only once
+IMAGE_TAG := $(shell date +%Y%m%d-%H-%M-%S)
 IMAGE ?= $(IMAGE_REGISTRY)/$(IMAGE_REPO)/$(IMAGE_NAME):$(IMAGE_TAG)
 
 # Build configuration
 GOOS ?= linux
 GOARCH ?= amd64
 
-.PHONY: all build docker-build docker-push deploy undeploy clean
+.PHONY: all build docker-build docker-push docker-build-push deploy undeploy test clean help
 
 all: build
 
@@ -19,14 +21,22 @@ build:
 
 ## Build docker image
 docker-build:
+	@echo "Building image: $(IMAGE)"
 	docker build -t $(IMAGE) -f Dockerfile ../..
 
 ## Push docker image
 docker-push:
+	@echo "Pushing image: $(IMAGE)"
 	docker push $(IMAGE)
 
-## Build and push
-docker-build-push: docker-build docker-push
+## Build and push (ensures same tag is used)
+docker-build-push:
+	@echo "Building and pushing image: $(IMAGE)"
+	docker build -t $(IMAGE) -f Dockerfile ../..
+	docker push $(IMAGE)
+	@echo ""
+	@echo "Image: $(IMAGE)"
+	@echo "Update deploy/03-deployment.yaml with this image"
 
 ## Deploy to Kubernetes
 deploy:
@@ -40,6 +50,10 @@ undeploy:
 clean:
 	rm -rf bin/
 
+## Run tests against deployed webhook
+test:
+	@./test.sh
+
 ## Show help
 help:
 	@echo "Usage:"
@@ -49,6 +63,7 @@ help:
 	@echo "  make docker-build-push  - Build and push docker image"
 	@echo "  make deploy             - Deploy to Kubernetes"
 	@echo "  make undeploy           - Remove from Kubernetes"
+	@echo "  make test               - Run tests against deployed webhook"
 	@echo ""
 	@echo "Variables:"
 	@echo "  IMAGE_REGISTRY=$(IMAGE_REGISTRY)"
@@ -56,3 +71,6 @@ help:
 	@echo "  IMAGE_NAME=$(IMAGE_NAME)"
 	@echo "  IMAGE_TAG=$(IMAGE_TAG)"
 	@echo "  IMAGE=$(IMAGE)"
+	@echo ""
+	@echo "Override image tag:"
+	@echo "  make docker-build IMAGE_TAG=v1.0.0"
